# TWS

./: .gitignore  README.md  config.example.json  config.example.yaml  config.json  pyproject.toml
.github/workflows/: build.yml
docs/: architecture.md  context.md
docs/modules/: 01_connection_mechanism.md  02_strategy_system.md  03_production_deployment.md
examples/: config.example.json  run_dynamic_strategy.py  test_memory_load.py  test_specific_load.py  verify_okx_conn.py  verify_okx_precision.py  verify_okx_private.py  verify_okx_trade.py  verify_setup.py  verify_strategy_pos.py
quant_system/: main.py
quant_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
quant_system/core/: event.py  signal.py  state.py  types.py
quant_system/exchange/: base.py  generator.py  mock_adapter.py  okx_adapter.py
quant_system/strategy/: base.py  demo.py  dual_ma.py  dynamic_demo.py
quant_system/utils/: config.py
scripts/: tws.service  tws@.service  update.sh
scripts/macos/: com.tws.strategy.plist  start.sh  stop.sh
tests/integration/: test_full_loop.py  test_mock_adapter.py
tests/unit/: test_core_types.py  test_event_engine.py  test_state_machine.py
