[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tws-quant"
version = "0.1.0"
description = "TWS Quantitative Trading System"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "TWS Team" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "ccxt>=4.0.0,<4.5.0",
    "python-dotenv>=1.0.0",
    "pyyaml",  # Optional, but good if we switch
    "pydantic>=2.0.0"
]

[project.scripts]
tws-run = "quant_system.main:main" 
# Assuming we will create a main.py inside quant_system or move the root main.py

[tool.setuptools.packages.find]
where = ["."]
include = ["quant_system*"]
